@@ -89,3 +89,4 @@ Fixes/Patches incorporated from:
 	Jesse Wagner
 	Paul Maddox
 	Renaud Amar
+	Renat Sabitov
