@@ -514,7 +514,7 @@ then
 	AC_DEFINE_UNQUOTED(HAVE_READLINE,1,Do we have readline)
 fi
 
-FW_CHECK_SOCKET_LIBS
+#FW_CHECK_SOCKET_LIBS
 AC_CHECK_LIB(dl,dlopen,DLLIB=-ldl,DLLIB="")
 AC_SUBST(DLLIB)
 AC_CHECK_LIB(aio,aioread,AIOLIB=-laio,AIOLIB="")
