@@ -722,6 +722,8 @@ char *mysql_info(MYSQL *mysql) {
 
 my_ulonglong mysql_insert_id(MYSQL *mysql) {
 	debugFunction();
+	// FIXME: for mysql db's you can call "select last_insert_id()"
+	// for other db's, ????
 	return 0;
 }
 
